--- a/style.css
+++ b/style.css
@@ -1,68 +1,57 @@
-:root{
-    --img-width : 250px;
-    --text-width : 300px
+:root {
+    --img-width: 250px;
+    --text-width: 300px
 }
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: black ;
+    color: black;
 }
-body{
-    background-color: #8f89db;
+
+body {
+    /* background-color: #6c65cc; */
+    background-image: url(movie-background-collage.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-family: 'Poppins';
+
     position: relative;
 }
-.input_section{
+
+.input_section {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 30vh;
 }
-.input_section label{
+
+.input_section label {
     font-size: 20px;
     padding-right: 10px;
+    color: aliceblue;
 }
-#Movie_name{
+
+#Movie_name {
     padding: 10px;
     outline: none;
     border: none;
-    border-radius: 15px;
+    border-radius: 10px;
 }
-#search{
+
+#search {
     padding: 10px;
     font-size: 14px bold;
     margin: 10px;
     outline: none;
     border: none;
     cursor: pointer;
-    border-radius: 15px;
+    border-radius: 10px;
     background-color: #f5f5f5;
     transition: .5s ease;
 }
-.loader{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    position: absolute;
-    left: 50%;
-    animation: loading 1s infinite linear;
-    display: none;
-}
-@keyframes loading {
-    25%{
-        border-left: 5px solid black;
-    }
-    50%{
-        border-top: 5px solid black;
-    }
-    75%{
-        border-right: 5px solid black;
-    }
-    100%{
-        border-bottom: 5px solid black;
-    }
-}
-.movie-section{
+.movie-section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -70,26 +59,31 @@ body{
     width: 100vw;
     transition: 0.5s ease;
 }
-.card{
+
+.card {
     display: flex;
     flex-wrap: wrap;
-    background-color: #cfcaca;
+    background-color: #f3b5b5;
     border-radius: 20px;
-    box-shadow:  inset 10px 10px 15px #b1afaf,inset -10px -10px 20px #b3b3b3;
+    box-shadow: inset 10px 10px 15px #f7c0c0, inset -10px -10px 20px #f7c0c0;
     min-width: calc(var(--img-width) + var(--text-width));
+    /* color: white; */
+    transition: 0.5s ease;
 }
-.image-container{
+
+.image-container {
     margin: 10px;
     display: flex;
 }
-.image-container img{
+
+.image-container img {
     object-fit: contain;
     object-position: center;
     width: 250px;
     border-radius: 10px;
 }
 
-.text-container{
+.text-container {
     margin: 10px;
     display: flex;
     flex-direction: column;
